<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="favorites_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="create">Создать</string>
    <string name="media_library_is_empty">Ваша медиатека пуста</string>
    <string name="you_dont_have_playlists">Вы не создали\n ни одного плейлиста</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="share">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="edit">Редактировать</string>
    <string name="remove_playlist">Удалить плейлист</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="text_mail_for_support">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="title_mail_for_support">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="uri_to_user_agreement" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="uri_to_course" translatable="false">https://practicum.yandex.ru/profile/android-developer-plus/</string>
    <string name="default_email" translatable="false">Gruchamba@yandex.ru</string>
    <string name="share_app_toast_message">Нет доступных приложений</string>
    <string name="track_not_found">Ничего не нашлось</string>
    <string name="error_not_connection">Проблемы со связью</string>
    <string name="error_not_connection_description">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="save">Сохранить</string>
    <string name="your_search">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="cover_image">Обложка альбома</string>
    <string name="def_track_progress" translatable="false">00:00</string>
    <string name="back">Назад</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Название*</string>
    <string name="description">Описание</string>
    <string name="finish_creating_a_playlist">Завершить создание плейлиста?</string>
    <string name="all_unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="finish">Завершить</string>
    <string name="playlist">Плейлист</string>
    <string name="created">создан</string>
    <plurals name="tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
    <string name="add_in_playles">Добавить в плейлист</string>
    <string name="track_already_exist_in_playlist">Трек уже добавлен в плейлист</string>
    <string name="added_to_playlist">Добавлено в плейлист</string>
    <string name="cancel">Отмена</string>
    <string name="remove_track_confirm">Хотите удалить трек?</string>
    <string name="track_for_share_is_empty">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="do_you_want_to_delete_a_playlist">Хотите удалить плейлист?</string>
    <string name="playlist_is_empty">"В этом плейлисте нет треков</string>
    <string name="cant_start_foreground_service">"Не удается запустить службу"</string>
</resources>