<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/mainMenuBackgroundColor"
    android:orientation="vertical"
    android:padding="@dimen/default_layout_padding">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/yp_white"
        android:layout_marginBottom="20dp"
        android:background="?attr/mainMenuBackgroundColor"
        android:textSize="@dimen/default_text_size"/>

    <Button
        android:id="@+id/searchBtn"
        android:text="@string/search"
        app:icon="@drawable/ic_search"
        style="@style/ButtonStyle.MainMenuButtonStyle"/>

    <Button
        android:id="@+id/libraryBtn"
        android:text="@string/media_library"
        app:icon="@drawable/ic_library"
        style="@style/ButtonStyle.MainMenuButtonStyle" />

    <Button
        android:id="@+id/settingsBtn"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings"
        style="@style/ButtonStyle.MainMenuButtonStyle"/>

</LinearLayout>