<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AudioPlayerActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_arrow_back"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/albumPlaceholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/cover_image"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_def_album_img"
        app:layout_constraintTop_toTopOf="@+id/backBtn"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline" />

    <TextView
        android:id="@+id/trackName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:maxLines="1"
        android:layout_marginTop="25dp"
        style="@style/MediumText_22sp"
        app:layout_constraintTop_toBottomOf="@+id/albumPlaceholder"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        tools:text="Yesterday (Remastered 2009)" />

    <TextView
        android:id="@+id/artistName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        style="@style/MediumText_14sp"
        app:layout_constraintTop_toBottomOf="@+id/trackName"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        tools:text="The Beatles" />

    <ImageView
        android:id="@+id/addButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="centerInside"
        android:background="@drawable/rounded_bgn_for_btn"
        android:src="@drawable/ic_add_to_playlist"
        android:elevation="8dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/artistName"
        app:layout_constraintEnd_toStartOf="@+id/playButton"
        app:layout_constraintStart_toStartOf="@+id/left_guideline" />

    <ImageView
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_play_btn"
        android:elevation="8dp"
        android:layout_marginTop="10dp"
        android:background="?attr/whiteAndBlack25"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintTop_toBottomOf="@+id/artistName"
        app:layout_constraintEnd_toStartOf="@+id/likeButton"
        app:layout_constraintStart_toEndOf="@+id/addButton" />

    <ImageView
        android:id="@+id/likeButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="centerInside"
        android:background="@drawable/rounded_bgn_for_btn"
        android:src="@drawable/ic_not_like_track"
        android:elevation="8dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/artistName"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toEndOf="@+id/playButton" />

    <TextView
        android:id="@+id/trackProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/def_track_progress"
        style="@style/MediumText_14sp"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/playButton" />

    <TextView
        android:id="@+id/durationLbl"
        android:text="@string/duration"
        android:layout_marginTop="20dp"
        style="@style/AudioPlayerTrackLabelStyle"
        app:layout_constraintTop_toBottomOf="@+id/trackProgress"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"/>

    <TextView
        android:id="@+id/trackDuration"
        android:layout_marginTop="20dp"
        style="@style/AudioPlayerTrackLabelStyle.TrackValueStyle"
        app:layout_constraintTop_toBottomOf="@+id/trackProgress"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        tools:text="5:35"/>

    <TextView
        android:id="@+id/albumLbl"
        android:text="@string/album"
        style="@style/AudioPlayerTrackLabelStyle"
        app:layout_constraintTop_toBottomOf="@+id/durationLbl"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"/>

    <TextView
        android:id="@+id/trackAlbum"
        style="@style/AudioPlayerTrackLabelStyle.TrackValueStyle"
        app:layout_constraintTop_toBottomOf="@+id/trackDuration"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        tools:text="Yesterday (Remastered 2009)"/>

    <TextView
        android:id="@+id/yearLbl"
        android:text="@string/year"
        style="@style/AudioPlayerTrackLabelStyle"
        app:layout_constraintTop_toBottomOf="@+id/albumLbl"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"/>

    <TextView
        android:id="@+id/releaseDate"
        style="@style/AudioPlayerTrackLabelStyle.TrackValueStyle"
        app:layout_constraintTop_toBottomOf="@+id/trackAlbum"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        tools:text="1965"/>

    <TextView
        android:id="@+id/genreLbl"
        android:text="@string/genre"
        style="@style/AudioPlayerTrackLabelStyle"
        app:layout_constraintTop_toBottomOf="@+id/yearLbl"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"/>

    <TextView
        android:id="@+id/primaryGenreName"
        style="@style/AudioPlayerTrackLabelStyle.TrackValueStyle"
        app:layout_constraintTop_toBottomOf="@+id/releaseDate"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        tools:text="Rock"/>

    <TextView
        android:id="@+id/countryLbl"
        android:text="@string/country"
        style="@style/AudioPlayerTrackLabelStyle"
        app:layout_constraintTop_toBottomOf="@+id/genreLbl"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"/>

    <TextView
        android:id="@+id/trackCountry"
        style="@style/AudioPlayerTrackLabelStyle.TrackValueStyle"
        app:layout_constraintTop_toBottomOf="@+id/primaryGenreName"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        tools:text="Великобритания"/>


</androidx.constraintlayout.widget.ConstraintLayout>