<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.player.fragment.PlayerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <ImageView
            android:id="@+id/albumPlaceholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/cover_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_def_album_img"
            app:layout_constraintTop_toTopOf="@+id/backBtn"
            app:layout_constraintEnd_toEndOf="@+id/right_guideline_24"
            app:layout_constraintStart_toStartOf="@+id/left_guideline_24" />

        <TextView
            android:id="@+id/trackName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:maxLines="1"
            android:layout_marginTop="25dp"
            style="@style/MediumText_22sp"
            app:layout_constraintTop_toBottomOf="@+id/albumPlaceholder"
            app:layout_constraintEnd_toEndOf="@+id/right_guideline_24"
            app:layout_constraintStart_toStartOf="@+id/left_guideline_24"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/artistName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:maxLines="1"
            android:layout_marginTop="10dp"
            style="@style/MediumText_14sp"
            app:layout_constraintTop_toBottomOf="@+id/trackName"
            app:layout_constraintEnd_toEndOf="@+id/right_guideline_24"
            app:layout_constraintStart_toStartOf="@+id/left_guideline_24"
            tools:text="The Beatles" />

        <ImageView
            android:id="@+id/addButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_bgn_for_btn"
            android:elevation="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_add_to_playlist"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintEnd_toStartOf="@+id/playButton"
            app:layout_constraintStart_toStartOf="@+id/left_guideline_24"
            app:layout_constraintTop_toBottomOf="@+id/artistName" />

        <ImageView
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_play_btn"
            android:elevation="8dp"
            android:layout_marginTop="10dp"
            android:background="?attr/whiteAndBlack25"
            app:layout_constraintTop_toBottomOf="@+id/artistName"
            app:layout_constraintEnd_toStartOf="@+id/likeButton"
            app:layout_constraintStart_toEndOf="@+id/addButton" />

        <ImageView
            android:id="@+id/likeButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_bgn_for_btn"
            android:elevation="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_not_like_track"
            app:layout_constraintTop_toBottomOf="@+id/artistName"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline_24"
            app:layout_constraintStart_toEndOf="@+id/playButton" />

        <TextView
            android:id="@+id/trackProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/def_track_progress"
            style="@style/MediumText_14sp"
            app:layout_constraintStart_toStartOf="@+id/left_guideline_24"
            app:layout_constraintEnd_toEndOf="@+id/right_guideline_24"
            app:layout_constraintTop_toBottomOf="@+id/playButton" />

        <TextView
            android:id="@+id/durationLbl"
            android:text="@string/duration"
            android:layout_marginTop="20dp"
            style="@style/AudioPlayerTrackLabelStyle"
            app:layout_constraintTop_toBottomOf="@+id/trackProgress"
            app:layout_constraintStart_toStartOf="@+id/left_guideline_16"/>

        <TextView
            android:id="@+id/trackDuration"
            android:layout_marginTop="20dp"
            style="@style/AudioPlayerTrackLabelStyle.TrackValueStyle"
            app:layout_constraintTop_toBottomOf="@+id/trackProgress"
            app:layout_constraintEnd_toEndOf="@+id/right_guideline_16"
            tools:text="5:35"/>

        <TextView
            android:id="@+id/albumLbl"
            android:text="@string/album"
            style="@style/AudioPlayerTrackLabelStyle"
            app:layout_constraintTop_toBottomOf="@+id/durationLbl"
            app:layout_constraintStart_toStartOf="@+id/left_guideline_16"/>

        <TextView
            android:id="@+id/trackAlbum"
            style="@style/AudioPlayerTrackLabelStyle.TrackValueStyle"
            app:layout_constraintTop_toBottomOf="@+id/trackDuration"
            app:layout_constraintEnd_toEndOf="@+id/right_guideline_16"
            tools:text="Yesterday (Remastered 2009)"/>

        <TextView
            android:id="@+id/yearLbl"
            android:text="@string/year"
            style="@style/AudioPlayerTrackLabelStyle"
            app:layout_constraintTop_toBottomOf="@+id/albumLbl"
            app:layout_constraintStart_toStartOf="@+id/left_guideline_16"/>

        <TextView
            android:id="@+id/releaseDate"
            style="@style/AudioPlayerTrackLabelStyle.TrackValueStyle"
            app:layout_constraintTop_toBottomOf="@+id/trackAlbum"
            app:layout_constraintEnd_toEndOf="@+id/right_guideline_16"
            tools:text="1965"/>

        <TextView
            android:id="@+id/genreLbl"
            android:text="@string/genre"
            style="@style/AudioPlayerTrackLabelStyle"
            app:layout_constraintTop_toBottomOf="@+id/yearLbl"
            app:layout_constraintStart_toStartOf="@+id/left_guideline_16"/>

        <TextView
            android:id="@+id/primaryGenreName"
            style="@style/AudioPlayerTrackLabelStyle.TrackValueStyle"
            app:layout_constraintTop_toBottomOf="@+id/releaseDate"
            app:layout_constraintEnd_toEndOf="@+id/right_guideline_16"
            tools:text="Rock"/>

        <TextView
            android:id="@+id/countryLbl"
            android:layout_marginBottom="16dp"
            android:text="@string/country"
            style="@style/AudioPlayerTrackLabelStyle"
            app:layout_constraintStart_toStartOf="@+id/left_guideline_16"
            app:layout_constraintTop_toBottomOf="@+id/genreLbl" />

        <TextView
            android:id="@+id/trackCountry"
            android:layout_marginBottom="16dp"
            style="@style/AudioPlayerTrackLabelStyle.TrackValueStyle"
            app:layout_constraintTop_toBottomOf="@+id/primaryGenreName"
            app:layout_constraintEnd_toEndOf="@+id/right_guideline_16"
            tools:text="Великобритания"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

