<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:fillViewport="true"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    tools:context=".ui.library.newPlaylist.fragment.NewPlaylistFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <LinearLayout
            android:id="@+id/fragment_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/left_guideline_16"
            app:layout_constraintEnd_toEndOf="@id/right_guideline_16"
            app:layout_constraintBottom_toTopOf="@id/playlist_image">

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_playlist"
                android:layout_marginStart="20dp"
                style="@style/MediumText_26sp"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/playlist_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:layout_marginTop="32dp"
            android:src="@drawable/playlist_placeholder_layer_list"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@id/right_guideline_16"
            app:layout_constraintStart_toStartOf="@id/left_guideline_16"
            app:layout_constraintTop_toBottomOf="@id/fragment_header" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/playlist_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            style="@style/TextInputLayout"
            app:layout_constraintStart_toStartOf="@id/left_guideline_16"
            app:layout_constraintEnd_toEndOf="@id/right_guideline_16"
            app:layout_constraintTop_toBottomOf="@id/playlist_image">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:singleLine="true"
                android:hint="@string/title" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/playlist_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/TextInputLayout"
            app:layout_constraintStart_toStartOf="@id/left_guideline_16"
            app:layout_constraintEnd_toEndOf="@id/right_guideline_16"
            app:layout_constraintTop_toBottomOf="@id/playlist_title">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:singleLine="true"
                android:hint="@string/description" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="@id/left_guideline_16"
            app:layout_constraintEnd_toEndOf="@id/right_guideline_16"
            app:layout_constraintTop_toBottomOf="@+id/playlist_description"
            app:layout_constraintBottom_toTopOf="@+id/createBtn">

        </View>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/createBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:textAllCaps="false"
            android:enabled="false"
            android:textColor="@color/yp_white"
            android:background="@drawable/selector_button"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="16sp"
            android:text="@string/create"
            app:layout_constraintStart_toStartOf="@id/left_guideline_16"
            app:layout_constraintEnd_toEndOf="@id/right_guideline_16"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

